k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: activity-service
  labels:
    name: activity-service
